@@ -378,6 +378,14 @@ s32 SEQ_FILE_GC_Read(void)
 #ifndef MBSEQV4L
 	    seq_ui_options.SELECT_UNMUTED_TRACK = value;
 #endif
+	  } else if( strcmp(parameter, "UiSwapGpLedColours") == 0 ) {
+#ifndef MBSEQV4L
+	    seq_ui_options.SWAP_GP_LED_COLOURS = value;
+#endif
+	  } else if( strcmp(parameter, "UiSwapSelectLedColours") == 0 ) {
+#ifndef MBSEQV4L
+	    seq_ui_options.SWAP_SELECT_LED_COLOURS = value;
+#endif
 	  } else if( strcmp(parameter, "RemoteMode") == 0 ) {
 	    seq_midi_sysex_remote_mode = (value > 2) ? 0 : value;
 	  } else if( strcmp(parameter, "RemotePort") == 0 ) {
@@ -698,6 +706,16 @@ static s32 SEQ_FILE_GC_Write_Hlp(u8 write_to_file)
 
 #ifndef MBSEQV4L
   sprintf(line_buffer, "UiSelectUnmutedTrack %d\n", seq_ui_options.SELECT_UNMUTED_TRACK);
+  FLUSH_BUFFER;
+#endif
+
+#ifndef MBSEQV4L
+  sprintf(line_buffer, "UiSwapGpLedColours %d\n", seq_ui_options.SWAP_GP_LED_COLOURS);
+  FLUSH_BUFFER;
+#endif
+
+#ifndef MBSEQV4L
+  sprintf(line_buffer, "UiSwapSelectLedColours %d\n", seq_ui_options.SWAP_SELECT_LED_COLOURS);
   FLUSH_BUFFER;
 #endif
 
