@@ -199,6 +199,8 @@ typedef union {
     u8 PRINT_AND_MODIFY_WITHOUT_GATES:1;
     u8 PRINT_TRANSPOSED_NOTES:1;
     u8 SELECT_UNMUTED_TRACK:1;
+    u8 SWAP_GP_LED_COLOURS:1;
+    u8 SWAP_SELECT_LED_COLOURS:1;
   };
 } seq_ui_options_t;
 
